--- a/MyULibrary/MyULibrary.BAL/MyULibrary.BAL.csproj
+++ b/MyULibrary/MyULibrary.BAL/MyULibrary.BAL.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.18" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.21" />
   </ItemGroup>
