--- a/MyULibrary/MyULibrary/appsettings.json
+++ b/MyULibrary/MyULibrary/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:pruebaserverj.database.windows.net,1433;Initial Catalog=MyULibrary;Persist Security Info=False;User ID=ulibrary;Password=User123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
